--- a/WhatsAppTest/WhatsAppTest.csproj
+++ b/WhatsAppTest/WhatsAppTest.csproj
@@ -12,5 +12,8 @@
     <PackageReference Include="xunit.runner.visualstudio" Version="2.3.1" />
     <DotNetCliToolReference Include="dotnet-xunit" Version="2.3.1" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\WhatsApp\WhatsApp.csproj" />
+  </ItemGroup>
 
 </Project>
